feat: add authenticate student route
